--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="fav.ico">
     <title>Chatbot</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #6d0303 0%, #f4f4f4 100%);
+            background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1500&q=80') no-repeat center center fixed;
+            background-size: cover;
             margin: 0;
             padding: 0;
             min-height: 100vh;
@@ -21,45 +23,53 @@
             letter-spacing: 1px;
             text-shadow: 0 2px 8px #e0e7ff;
         }
+        
         #conversation {
-            max-width: 600px;
-            margin: 20px auto 80px auto;
-            padding: 10px;
-            border: 1px solid #ccc;
-            min-height: 200px;
-            background: #fafafa;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+            width: 50vw;
+            max-width: 700px;
+            min-width: 320px;
+            min-height: 500px;
+            background: rgba(255, 255, 255, 0.95);
+            border-radius: 12px;
+            box-shadow: 0 2px 12px rgba(0,0,0,0.08);
+            padding: 24px;
+            margin: 0 auto;
             overflow-y: auto;
+            max-height: 60vh;
+            box-sizing: border-box;
+            border: none;
         }
         .input-bar {
             position: fixed;
             bottom: 0;
             left: 0;
-            width: 100%;
-            background: #fff;
-            padding: 10px 0;
-            box-shadow: 0 -2px 8px #eee;
+            padding: 15px 0;
             display: flex;
             justify-content: center;
             z-index: 10;
         }
+        .input-bar-inner {
+            width: 80vw;
+            max-width: 800px;
+            display: flex;
+            justify-content: center;
+        }
         #inputBox {
-            width: 60%;
-            padding: 8px;
+            flex: 1;
+            padding: 10px;
             font-size: 16px;
             border: 1px solid #bbb;
             border-radius: 5px;
             outline: none;
             transition: border 0.2s;
+            margin-right: 8px;
         }
         #inputBox:focus {
             border-color: #007bff;
         }
         .input-bar button {
-            padding: 8px 16px;
+            padding: 10px 24px;
             font-size: 16px;
-            margin-left: 8px;
             background: #007bff;
             color: #fff;
             border: none;
@@ -78,28 +88,31 @@
             text-align: left;
             color: #28a745;
         }
-        @media (max-width: 700px) {
+        @media (max-width: 900px) {
             #conversation {
-                max-width: 98vw;
-                margin: 10px 1vw 80px 1vw;
+                padding: 20px 2vw 20px 2vw;
             }
-            #inputBox {
-                width: 70%;
+            .input-bar-inner {
+                width: 96vw;
+                max-width: 96vw;
             }
         }
         @media (max-width: 500px) {
             #conversation {
-                margin: 5px 1vw 80px 1vw;
-                min-height: 120px;
+                min-height: 200px;
                 font-size: 15px;
+                padding: 10px 1vw 10px 1vw;
+            }
+            .input-bar-inner {
+                width: 98vw;
+                max-width: 98vw;
             }
             #inputBox {
-                width: 60%;
                 font-size: 15px;
             }
             .input-bar button {
                 font-size: 15px;
-                padding: 8px 10px;
+                padding: 10px 10px;
             }
         }
         .loader {
@@ -122,8 +135,10 @@
     <div class="page-title">Chatbot</div>
     <div id="conversation"></div>
     <div class="input-bar">
-        <input type="text" id="inputBox" placeholder="Type your message..." onkeydown="if(event.key==='Enter'){sendToPython();}">
-        <button onclick="sendToPython()">Send</button>
+        <div class="input-bar-inner">
+            <input type="text" id="inputBox" placeholder="Type your message..." onkeydown="if(event.key==='Enter'){sendToPython();}">
+            <button onclick="sendToPython()">Send</button>
+        </div>
     </div>
     <script>
         const conversation = document.getElementById('conversation');
